{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 74,
  "lineage": "198bfc1e-dbd1-dfe2-b1b6-f6d01eeef4d8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016a8c82fd155b678",
            "domain": "vpc",
            "id": "eipalloc-016a8c82fd155b678",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-219-48-184.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.48.184",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:internet-gateway/igw-08d1d97b6dbbdcf91",
            "id": "igw-08d1d97b6dbbdcf91",
            "owner_id": "885300287765",
            "tags": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01def1f11cd7deeec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016a8c82fd155b678",
            "connectivity_type": "public",
            "id": "nat-0abb44361a2d3c243",
            "network_interface_id": "eni-0c57e9e38310b469e",
            "private_ip": "10.0.0.157",
            "public_ip": "18.219.48.184",
            "subnet_id": "subnet-027f5c527545e1f7e",
            "tags": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:network-acl/acl-0c6e22127d0b8fd1e",
            "egress": [],
            "id": "acl-0c6e22127d0b8fd1e",
            "ingress": [],
            "owner_id": "885300287765",
            "subnet_ids": [
              "subnet-023cd794a6cf5b2cf",
              "subnet-0cead18ed696d9393"
            ],
            "tags": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01def1f11cd7deeec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:network-acl/acl-007a99c44c58f0630",
            "egress": [],
            "id": "acl-007a99c44c58f0630",
            "ingress": [],
            "owner_id": "885300287765",
            "subnet_ids": [
              "subnet-027f5c527545e1f7e",
              "subnet-02c18829ce37356e2"
            ],
            "tags": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01def1f11cd7deeec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1154299133",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c6e22127d0b8fd1e",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3379826387",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c6e22127d0b8fd1e",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4032589025",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-007a99c44c58f0630",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1402086703",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-007a99c44c58f0630",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03a2d629b512390c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0abb44361a2d3c243",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a2d629b512390c4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08d1d97b6dbbdcf91",
            "id": "r-rtb-05e30282c2aba3dfa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e30282c2aba3dfa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:route-table/rtb-03a2d629b512390c4",
            "id": "rtb-03a2d629b512390c4",
            "owner_id": "885300287765",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01def1f11cd7deeec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:route-table/rtb-05e30282c2aba3dfa",
            "id": "rtb-05e30282c2aba3dfa",
            "owner_id": "885300287765",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01def1f11cd7deeec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068c94f9712e7c273",
            "route_table_id": "rtb-03a2d629b512390c4",
            "subnet_id": "subnet-0cead18ed696d9393"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ada74ade0952d8a3",
            "route_table_id": "rtb-03a2d629b512390c4",
            "subnet_id": "subnet-023cd794a6cf5b2cf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de68b19f37b6a1b6",
            "route_table_id": "rtb-05e30282c2aba3dfa",
            "subnet_id": "subnet-027f5c527545e1f7e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5b519d5c3118aee",
            "route_table_id": "rtb-05e30282c2aba3dfa",
            "subnet_id": "subnet-02c18829ce37356e2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:subnet/subnet-0cead18ed696d9393",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cead18ed696d9393",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885300287765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tek-poc-private1-us-east-2a"
            },
            "tags_all": {
              "Name": "tek-poc-private1-us-east-2a"
            },
            "vpc_id": "vpc-01def1f11cd7deeec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:subnet/subnet-023cd794a6cf5b2cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023cd794a6cf5b2cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885300287765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tek-poc-private2-us-east-2b"
            },
            "tags_all": {
              "Name": "tek-poc-private2-us-east-2b"
            },
            "vpc_id": "vpc-01def1f11cd7deeec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:subnet/subnet-027f5c527545e1f7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027f5c527545e1f7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "885300287765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tek-poc-public1-us-east-2a"
            },
            "tags_all": {
              "Name": "tek-poc-public1-us-east-2a"
            },
            "vpc_id": "vpc-01def1f11cd7deeec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:subnet/subnet-02c18829ce37356e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c18829ce37356e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "885300287765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tek-poc-public2-us-east-2b"
            },
            "tags_all": {
              "Name": "tek-poc-public2-us-east-2b"
            },
            "vpc_id": "vpc-01def1f11cd7deeec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:vpc/vpc-01def1f11cd7deeec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-03717dbffa157392c",
            "default_route_table_id": "rtb-04835e83c205930c6",
            "default_security_group_id": "sg-07afa40138e0808e8",
            "dhcp_options_id": "dopt-0a44ae30c69b8db23",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01def1f11cd7deeec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04835e83c205930c6",
            "owner_id": "885300287765",
            "tags": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "tekton",
              "Name": "tekton-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}